# devagent

./: .env.example  .gitignore  Agents.md  Changes.md  Demo.md  Plan.md  README.md  pyproject.toml  requirements.txt  setup.py  workflow.txt
.claude/: settings.local.json
agent/: commands.py  context.py  core.py  safety.py
code_engine/: analyzer.py  embeddings.py  generator.py  parser.py  search.py
config/: llm.py  settings.py
integrations/: git.py  github.py  sentry.py  vercel.py
jarvis/: config.py  main.py
jarvis/agents/: calendar_agent.py  contacts_agent.py  email_agent.py  github_agent.py  memory_agent.py  messaging_agent.py  notes_agent.py  notion_agent.py  registry.py  research_agent.py  scheduler_agent.py  spotify_agent.py  supervisor.py  task_agent.py  thoughts_agent.py  vault_agent.py
jarvis/auth/: authenticator.py  google_auth.py  spotify_auth.py
jarvis/bot/: telegram.py
jarvis/brain/: agent.py  llm.py  memory.py
jarvis/core/: base_agent.py  context.py  credentials.py  llm_factory.py
jarvis/db/: database.py  embeddings.py  encryption.py  migrations.py  models.py  (+2 more)
storage/: cache.py  db.py
tests/: conftest.py  test_auth.py  test_cache.py  test_code_generator.py  test_commands.py  test_config.py  test_context.py  test_db.py  test_embeddings.py  test_file_search.py  test_git_integration.py  test_github_integration.py  test_llm_provider.py  test_parser.py  test_project_detection.py  test_safety.py  test_sentry_integration.py  test_telegram_bot.py  test_validation.py  test_vercel_integration.py
tg_bot/: auth.py  bot.py  handlers.py
(+37 files in other folders)
